# link-shortner

./: .env.example  Cargo.toml
src/: main.rs  responses.rs
src/lib/: jwt.rs  mod.rs  slug.rs
src/models/: mod.rs  shortned.rs
src/routes/: link.rs  links.rs  login.rs  mod.rs
