[package]
name = "link-shortner"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
libsql = "0.3.5"
serde = { version = "1.0.200", features = ["derive"] }
